syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";

message Sum{
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumRequest{
    Sum sum = 1;
}

message SumResponse{
    int32 result = 1;
}

message PrimeNumberDec{ 
    int32 number = 1;
}

message PrimeNumberDecRequest{
    PrimeNumberDec primeNumberDec = 1;
}

message PrimeNumberDecResponse{
    int32 result = 1;
}

message ComputeAverage{
    float number = 1;
}

message ComputeAverageRequest{
    ComputeAverage computeAverage = 1;
}

message ComputeAverageResponse{
    float result = 1;
}

service CalculateService{
    // Unary
    rpc Sum (SumRequest) returns (SumResponse){};
    rpc PrimeNumberDec (PrimeNumberDecRequest) returns (stream PrimeNumberDecResponse){};
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse);
}